[package]
name = "abc"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
jsonrpsee = { version = "0.26.0", features = ["server"] }
proptest = "1.9.0"
secp256k1 = { version = "0.31.1", features = [
  "global-context",
  "hashes",
  "rand",
  "std"
] }
sha3 = "0.10.8"
